[package]
authors       = ["jice <jice.nospam@gmail.com>"]
description   = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
documentation = "https://docs.rs/doryen-rs"
edition       = "2021"
exclude       = ["www/*"]
homepage      = "https://jice-nospam.github.io/doryen-rs/index.html"
keywords      = ["roguelike", "console", "opengl", "wasm"]
license       = "MIT"
name          = "doryen-rs"
repository    = "https://github.com/jice-nospam/doryen-rs"
version       = "1.4.0"

[dependencies]
uni-app = { git = "https://github.com/unrust/uni-app" }
uni-gl  = { git = "https://github.com/unrust/uni-gl" }

[dependencies.image]
default-features = false
features         = ["png"]
version          = "0.24"

[dev-dependencies]
doryen-fov           = "0.1"
unicode-segmentation = "1"

[features]
